# vsw

./: .gitignore  CONTRIBUTING.md  README.md  deploy.sh  package.sh  requirements.txt  setup.cfg  setup.py
ci/: 00-environment-info  01-initialize-wallets  02-create-connection-and-credential-definition  03-list-connections  04-create-credential-definition  Dockerfile  functions  run  tests
clitests/: P1.json  P2.json  P3.json  P4.json  README  V1.json  V2.json  V3.json  V4.json  V5.json  V6.json  alltests  repeattests  start  test1-install
data/: publish.json  publish_attest.json  verify.json  verify_attest.json  verify_combine.json
docs/: README.md  UserManual.md  vsw-DID-VC-v1.0.md  vsw-DID-specification.md  vsw-DID-v1.0.md
docs/assets/: README.md  vsw_publish.drawio
docs/communication/: README.md  vsw publish_detailed.txt  vsw-init.txt  vsw-install.txt  vsw-overall-flow.txt  vsw-publish.txt  vsw-register.txt  vsw-repo first run with sovrin.txt  vsw-repo-startup.txt  vsw_init_with_ledger.drawio
docs/design/: web.md
docs/meeting-minutes/: 2020-10-13.md  2020-10-20.md  Add agenda for 2020-10-27
docs/meeting-minutes/media/: Demo.pptx
man/man1/: READE.md  README.md  README.md.formatted  git-pull.txt  m2h.sh  m2local.sh  makefile  vsw-attest.1  vsw-audit.1  vsw-init.1  vsw-install.1  vsw-list.1  vsw-publish.1  vsw-register.1  vsw-setup.1  vsw-verify.1
reference/: repo.py
schemas/: README.md  software-provenance.json  software.json  user-domain.json  user-email.json  user-github.json  user.json
src/: __init__.py  __main__.py  cli.py  utils.py
src/commands/: help.py  init.py  list.py  publish.py  register.py
src/conf/: vsw-dev.ini  vsw-prod.ini
testcases/: testcase-1-create-DID.md  testcase-2-create-Package.json.md  testcase-3-publish.md
tests/: docker.sh  test_cli.py  test_env.py  test_exit.py  test_init.py  test_list.py  test_public_ip.py  test_publish.py  test_revoke.py  test_setup.py  test_socket.py  test_sqlite.py  test_sqlite3.py  test_utils.py  test_verify.py
tests/data/: publish.json  publish_attest.json  publish_simple.json  verify.json  verify_all.json  verify_attest.json  verify_combine.json  verify_predicates.json  verify_simple.json
vsw/: __init__.py  __main__.py  cli.py  env.py  log.py  package.json  utils.py
vsw-repo/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
vsw-repo/app/: agent.js  app.js  package-lock.json  package.json
vsw-webhook/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json  scrap.js  server.js
vsw-webhook/config/: prod.js
vsw-webhook/events/: README.MD  vsw_publish_full_log.txt  vsw_repo_full_log.txt
vsw/commands/: agent.py  attest.py  exit.py  help.py  init.py  list.py  provision.py  publish.py  register.py  revoke.py  setup.py  verify.py
vsw/conf/: aries_logging_config.ini  local_tunnel.sh  vsw.ini
vsw/controller/: server.py
vsw/dao/: vsw_dao.py
