[metadata]
name = vsw
version = 0.1.0
license_file = LICENSE
author = Futurewei Technologies
author_email = gang4.chen@symbio.com
description = Command line tool for interacting with the verifiable software repository
url = git+https://github.com/verifiablesoftware/vsw.git
home-page = https://github.com/verifiablesoftware/vsw#readme
[options]
packages =
    src
    src.commands
python_requires = >=3.6
install_requires=
    pkginfo >= 1.4.2
    readme_renderer >= 21.0
    requests >= 2.20
    requests-toolbelt >= 0.8.0, != 0.9.0
    setuptools >= 0.7.0
    setuptools_scm
    tqdm >= 4.14
    importlib_metadata; python_version < "3.8"
    keyring >= 15.1
    rfc3986 >= 1.4.0
    colorama >= 0.4.3
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
vsw.registered_commands =
    init = src.commands.init:main
    exit = src.commands.exit:main
    register = src.commands.register:main
    publish = src.commands.publish:main
    verify = src.commands.verify:main
    list = src.commands.list:main
    help = src.commands.help:main
console_scripts =
    vsw = src.__main__:main
