[metadata]
name = vsw
version = 0.0.4
license_file = LICENSE
author = Futurewei Technologies
author_email = gang4.chen@symbio.com
description = Command line tool for interacting with the verifiable software repository
url = https://github.com/verifiablesoftware/vsw.git
home-page = https://github.com/verifiablesoftware/vsw#readme

[options]
packages =
    vsw
    vsw.commands
    vsw.conf
    vsw.controller
python_requires = >=3.6
setup_requires =
    setuptools >= 45
    setuptools-scm >= 1.15
include_package_data=True
[options.entry_points]
vsw.registered_commands =
    setup = vsw.commands.setup:main
    init = vsw.commands.init:main
    exit = vsw.commands.exit:main
    publish = vsw.commands.publish:main
    revoke = vsw.commands.revoke:main
    verify = vsw.commands.verify:main
    list = vsw.commands.list:main
    help = vsw.commands.help:main
console_scripts =
    vsw = vsw.__main__:main

